# com.webos.service.flowmanager

./: .gitignore  CMakeLists.txt  index.js  logger.js  lunabus.js  oss-pkg-info.yaml  package.json  webpack.config.js
apps/com.webos.app.mediaviewer/: .gitignore  appinfo.json  index.html  oe-logs  oe-workdir
apps/com.webos.app.mediaviewer/css/: style.css
apps/com.webos.app.mediaviewer/js/: main.js
certs/: private.pem  public.pem
files/flow/: flows.json.in
files/launch/: flowmgr.conf.in
files/sysbus/: com.webos.service.flowmanager.perm.json  com.webos.service.flowmanager.role.json  com.webos.service.flowmanager.service
files/systemd/: flowmgr.service.in  flowmgr.sh.in
nodes/ls2/: ls2.html  ls2.js
nodes/samLaunch/: samLaunch.html  samLaunch.js
nodes/ttsSpeak/: ttsSpeak.html  ttsSpeak.js
nodes/ttsStop/: ttsStop.html  ttsStop.js
